Fixed bug with touch action on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -214,7 +214,7 @@ button, a {
   padding-top: 3rem;
   padding-left: calc(min(10rem, 10vw));
   padding-right: calc(min(10rem, 10vw));
-  padding-bottom: 10rem;
+  padding-bottom: 7rem;
   font-size: $fontSizeSmall;
   font-weight: 300;
   line-height: $fontSizeSmall * 2;
